sabnzbd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - env:
        - name: HOST_WHITELIST_ENTRIES
          value: "sabnzbd.anasjabri.com"
        - name: TZ
          value: America/Edmonton
        image: linuxserver/sabnzbd:latest
        imagePullPolicy: IfNotPresent
        name: sabnzbd
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: sabnzbd-config
        - mountPath: /downloads
          name: sabnzbd-downloads
        - mountPath: /incomplete-downloads
          name: sabnzbd-incomplete-downloads
      restartPolicy: Always
      volumes:
      - name: sabnzbd-config
        persistentVolumeClaim:
          claimName: sabnzbd-config
      - name: sabnzbd-downloads
        nfs:
          path: /mnt/TrueNAS_2TB_pool_1/plex
          server: 10.0.15.15
      - name: sabnzbd-incomplete-downloads
        nfs:
          path: /mnt/TrueNAS_2TB_pool_1/sabnzbd/incomplete-downloads
          server: 10.0.15.15
