sabnzbd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-service
  namespace: sabnzbd
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sabnzbd
  type: LoadBalancer
